# kybes-pastebin

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml  db.db
server/src/: main.rs
