[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
mime_guess = "2.0.5"
reqwest = { version = "0.12.22", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }   
serde_json = "1.0.141"
tokio = { version="1.46.1", features = ["full"]}
toml = "0.9.2"