[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version ="1.46.1", features = ["full"]}
axum = "0.8.4"
uuid = { version="1.17.0", features= ["v4"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.141"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
hyper = "1.6.0"
